--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ ul.navbar li {
     float:left;
     font-size: 20px;
 }
-
 ul.navbar li a {
     display: block;
     color: white; 
@@ -19,13 +18,15 @@ ul.navbar li a {
     padding: 14px 16px;
     text-decoration:solid;
 }
-
 ul.navbar li a:hover {
     background-color: #215bad;         
             
 }      
-    
-
+.rightnav{
+    display: flex;
+    align-items: right;
+    justify-content: right;
+}
 body {
     font-family:'Times New Roman', Times, serif;
     background-color: #f0f0f0;
@@ -95,9 +96,28 @@ body {
 }
 
 .loginMain {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 500px;
     height: 500px;
-    margin: 0 auto;
+    margin:0 auto;
+    margin-top: 50px;
+    border-radius: 15px;
+    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
+    background-color: hsl(190, 56%, 92%);
+    padding: 20px;
+    text-align: center;
+    
+
+}
+
+.loginMain h2 {
+    text-align: center;
+    color:#7394e9;
+    font-size: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
 
 #loginform {
@@ -155,13 +175,13 @@ input[type="text"], textarea{
 }
 
 #loginButton {
-
 background-color: #7394e9;
 color: #000000;
 cursor: pointer;
 width: 75px;
 height: 25px;
 }
+
 
 *{box-sizing:border-box}
 
@@ -298,9 +318,9 @@ height: 25px;
     width: 100%;
     padding: 10px;
     margin: 10px 0;
-
 }
 
 .error {
     color: red;
 }
+
