--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 ul.navbar {
     list-style-type: none;
-    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 10px;
-    background-color:black;
-    overflow: hidden;
-    border: 20px                    
+    background-color: black;
+    color: #fff;              
 }
 
 ul.navbar li {
